<resources>
    <string name="app_name">StemApp</string>

    <string name="voteButtonText">Stem</string>
    <string name="voteButtonNoBallot">Wachten op stembiljet</string>
    <string name="startButtonText">Stemmen</string>
    <string name="verifyButtonText">Controleer uw uitgebrachte stem</string>

    <string name="partyTitle">Kiezen</string>
    <string name="successTitle">Stem</string>
    <string name="verificationTitle">Stem controle</string>
    <string name="votingTilesTitle">Kiezen</string>
...
