<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="5dp">

    <TextView
        android:id="@+id/secret_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@color/blue"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/rect_white"
        android:layout_below="@id/secret_info"
        android:gravity="center"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/qr_code"
        android:layout_centerHorizontal="true"
        android:background="@color/semi_gray"
        android:onClick="closeDialog"
        android:padding="16dp"
        android:text="@android:string/ok"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />


</RelativeLayout>